--- a/PersonWeb/WebContent/css/my.css
+++ b/PersonWeb/WebContent/css/my.css
@@ -1,43 +1,37 @@
 @CHARSET "UTF-8";
+*{
+	margin:0;
+	padding:0;
+}
+.login_putin input{
+	margin: 0;
+	width:50%;
+	margin-top:200px;
+	margin-bottom:50px;
+	margin-right:50px;
+	margin-left:50px;
+	padding: 1em 2em 1em 5.4em;
+	-webkit-border-radius:.3em;
+	-moz-border-radius: .3em;
+	border: 1px solid #999;
+}
+.login_btn{
+	width:180px;
+	margin:40px auto 0 auto;
+}
 
-div{
-	color:orange;
-	font-family:隶书;
-}
-#div3{
-	color:pink;
-	font-family:yellow;
-	font-size:40px;
-}
-.div4{
-	color:#800040;
-	font-family:楷体;
-	font-size:5px;
-}
-table{
-	color:#800040;
-	font-family:宋体;
-	font-size:20px;
-}
-ul{
-	color:#600040;
-	font-family:仿宋;
-	font-size:25px;
-}
-input{
-	background:write;
-	color:green;
-	font-size:40px;
-}
-input[name='psw']{
-	background:write;
-	color:lightblue;
-	font-size:40px;
-}
-input[name='usename']{
-	background:blue;
-	color:yellow;
-	font-size:50px;
+.login_btn input{
+	width:100%;
+	margin:0;
+	padding:.5em 0;
+	-webkit-border-radius:.3em;
+	-moz-border-radius: .3em;
+	border:#1263be solid 1px;
+	background:#1b85fd;
+	color:#FFF;
+	font-size:7px;
+	font-weight:bolder;
+	letter-spacing:1em;
 }
 a:HOVER{
 	font-size:80px;
